build/parser.output
Terminals unused in grammar

    CONST
    VOLATILE
    VIRTUAL
    FRIEND
    INLINE
    OPERATOR
    OVERLOAD
    TEMPLATE
    THIS
    NEW
    DELETE
    NAMESPACE
    USING
    TRY
    CATCH
    THROW
    TYPEDEF_NAME
    SCOPE
    NEWLINE
    END
    ERROR
    DESTRUCTOR
    UMINUS
    UPLUS


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration
    6                     | preprocessor_directive

    7 preprocessor_directive: PREP

    8 function_definition: declaration_specifiers declarator compound_statement
    9                    | declarator compound_statement

   10 declaration: declaration_specifiers init_declarator_list SEMI
   11            | declaration_specifiers SEMI

   12 declaration_specifiers: storage_class_specifier
   13                       | storage_class_specifier declaration_specifiers
   14                       | type_specifier
   15                       | type_specifier declaration_specifiers

   16 storage_class_specifier: TYPEDEF
   17                        | STATIC
   18                        | EXTERN
   19                        | REGISTER
   20                        | AUTO

   21 type_specifier: type_keyword
   22               | struct_or_union_specifier
   23               | enum_specifier
   24               | class_specifier

   25 type_keyword: VOID
   26             | CHAR
   27             | SHORT
   28             | INT
   29             | LONG
   30             | FLOAT
   31             | DOUBLE
   32             | SIGNED
   33             | UNSIGNED
   34             | BOOL

   35 struct_or_union_specifier: struct_or_union ID LBRACE struct_declaration_list RBRACE
   36                          | struct_or_union LBRACE struct_declaration_list RBRACE
   37                          | struct_or_union ID

   38 struct_or_union: STRUCT
   39                | UNION

   40 struct_declaration_list: struct_declaration
   41                        | struct_declaration_list struct_declaration

   42 struct_declaration: type_specifier struct_declarator_list SEMI

   43 struct_declarator_list: struct_declarator
   44                       | struct_declarator_list COMMA struct_declarator

   45 struct_declarator: declarator

   46 enum_specifier: ENUM ID LBRACE enumerator_list RBRACE
   47               | ENUM LBRACE enumerator_list RBRACE
   48               | ENUM ID

   49 class_specifier: CLASS ID LBRACE class_declaration_list RBRACE
   50                | CLASS LBRACE class_declaration_list RBRACE
   51                | CLASS ID

   52 class_declaration_list: class_declaration
   53                       | class_declaration_list class_declaration

   54 class_declaration: access_specifier COLON
   55                  | member_declaration

   56 access_specifier: PUBLIC
   57                 | PRIVATE
   58                 | PROTECTED

   59 member_declaration: declaration_specifiers member_declarator_list SEMI
   60                   | declaration_specifiers SEMI
   61                   | function_definition

   62 member_declarator_list: member_declarator
   63                       | member_declarator_list COMMA member_declarator

   64 member_declarator: declarator
   65                  | declarator ASSIGN assignment_expression

   66 enumerator_list: enumerator
   67                | enumerator_list COMMA enumerator

   68 enumerator: ID
   69           | ID ASSIGN assignment_expression

   70 init_declarator_list: init_declarator
   71                     | init_declarator_list COMMA init_declarator

   72 init_declarator: declarator
   73                | declarator ASSIGN initializer

   74 declarator: pointer direct_declarator
   75           | direct_declarator

   76 pointer: MUL
   77        | MUL pointer

   78 direct_declarator: ID
   79                  | LPAREN declarator RPAREN
   80                  | direct_declarator LBRACKET RBRACKET
   81                  | direct_declarator LBRACKET assignment_expression RBRACKET
   82                  | direct_declarator LPAREN RPAREN
   83                  | direct_declarator LPAREN parameter_list RPAREN

   84 parameter_list: parameter_declaration
   85               | parameter_list COMMA parameter_declaration
   86               | parameter_list COMMA ELLIPSIS

   87 parameter_declaration: declaration_specifiers declarator
   88                      | declaration_specifiers abstract_declarator
   89                      | declaration_specifiers

   90 abstract_declarator: pointer
   91                    | pointer direct_abstract_declarator
   92                    | direct_abstract_declarator

   93 direct_abstract_declarator: LPAREN abstract_declarator RPAREN
   94                           | LBRACKET RBRACKET
   95                           | LBRACKET assignment_expression RBRACKET
   96                           | direct_abstract_declarator LBRACKET RBRACKET
   97                           | direct_abstract_declarator LBRACKET assignment_expression RBRACKET
   98                           | LPAREN RPAREN
   99                           | LPAREN parameter_list RPAREN
  100                           | direct_abstract_declarator LPAREN RPAREN
  101                           | direct_abstract_declarator LPAREN parameter_list RPAREN

  102 type_name: type_specifier
  103          | type_specifier abstract_declarator

  104 initializer: assignment_expression
  105            | LBRACE initializer_list RBRACE
  106            | LBRACE initializer_list COMMA RBRACE

  107 initializer_list: initializer
  108                 | initializer_list COMMA initializer

  109 compound_statement: LBRACE RBRACE
  110                   | LBRACE block_item_list RBRACE

  111 block_item_list: block_item
  112                | block_item_list block_item

  113 block_item: declaration
  114           | statement

  115 statement: labeled_statement
  116          | expression_statement
  117          | compound_statement
  118          | selection_statement
  119          | iteration_statement
  120          | jump_statement

  121 labeled_statement: ID COLON statement
  122                  | CASE assignment_expression COLON statement
  123                  | DEFAULT COLON statement

  124 expression_statement: expression SEMI
  125                     | SEMI

  126 selection_statement: IF LPAREN expression RPAREN statement
  127                    | IF LPAREN expression RPAREN statement ELSE statement
  128                    | SWITCH LPAREN expression RPAREN statement

  129 iteration_statement: WHILE LPAREN expression RPAREN statement
  130                    | DO statement WHILE LPAREN expression RPAREN SEMI
  131                    | FOR LPAREN for_init_statement expression_statement RPAREN statement
  132                    | FOR LPAREN for_init_statement expression_statement expression RPAREN statement
  133                    | FOR LPAREN range_based_for RPAREN statement

  134 for_init_statement: expression_statement
  135                   | declaration

  136 range_based_for: declaration_specifiers ID COLON expression
  137                | declaration_specifiers BIT_AND ID COLON expression

  138 jump_statement: GOTO ID SEMI
  139               | CONTINUE SEMI
  140               | BREAK SEMI
  141               | RETURN expression SEMI
  142               | RETURN SEMI

  143 expression: assignment_expression
  144           | expression COMMA assignment_expression

  145 assignment_expression: conditional_expression
  146                      | unary_expression assignment_operator assignment_expression

  147 assignment_operator: ASSIGN
  148                    | PLUS_EQ
  149                    | MINUS_EQ
  150                    | MUL_EQ
  151                    | DIV_EQ
  152                    | MOD_EQ
  153                    | AND_EQ
  154                    | OR_EQ
  155                    | XOR_EQ
  156                    | LSHIFT_EQ
  157                    | RSHIFT_EQ

  158 conditional_expression: logical_or_expression
  159                       | logical_or_expression QUESTION expression COLON conditional_expression

  160 logical_or_expression: logical_and_expression
  161                      | logical_or_expression OR logical_and_expression

  162 logical_and_expression: inclusive_or_expression
  163                       | logical_and_expression AND inclusive_or_expression

  164 inclusive_or_expression: exclusive_or_expression
  165                        | inclusive_or_expression BIT_OR exclusive_or_expression

  166 exclusive_or_expression: and_expression
  167                        | exclusive_or_expression BIT_XOR and_expression

  168 and_expression: equality_expression
  169               | and_expression BIT_AND equality_expression

  170 equality_expression: relational_expression
  171                    | equality_expression EQ relational_expression
  172                    | equality_expression NE relational_expression

  173 relational_expression: shift_expression
  174                      | relational_expression LT shift_expression
  175                      | relational_expression GT shift_expression
  176                      | relational_expression LE shift_expression
  177                      | relational_expression GE shift_expression

  178 shift_expression: additive_expression
  179                 | shift_expression LSHIFT additive_expression
  180                 | shift_expression RSHIFT additive_expression

  181 additive_expression: multiplicative_expression
  182                    | additive_expression PLUS multiplicative_expression
  183                    | additive_expression MINUS multiplicative_expression

  184 multiplicative_expression: cast_expression
  185                          | multiplicative_expression MUL cast_expression
  186                          | multiplicative_expression DIV cast_expression
  187                          | multiplicative_expression MOD cast_expression

  188 cast_expression: unary_expression
  189                | LPAREN type_name RPAREN cast_expression

  190 unary_expression: postfix_expression
  191                 | INC unary_expression
  192                 | DEC unary_expression
  193                 | unary_operator cast_expression
  194                 | SIZEOF unary_expression
  195                 | SIZEOF LPAREN type_name RPAREN

  196 unary_operator: BIT_AND
  197               | MUL
  198               | PLUS
  199               | MINUS
  200               | BIT_NOT
  201               | NOT

  202 postfix_expression: primary_expression
  203                   | postfix_expression LBRACKET expression RBRACKET
  204                   | postfix_expression LPAREN argument_expression_list RPAREN
  205                   | postfix_expression LPAREN RPAREN
  206                   | postfix_expression DOT ID
  207                   | postfix_expression ARROW ID
  208                   | postfix_expression INC
  209                   | postfix_expression DEC

  210 primary_expression: ID
  211                   | constant
  212                   | string_literal
  213                   | LPAREN expression RPAREN

  214 string_literal: STRING_LIT
  215               | string_literal STRING_LIT

  216 argument_expression_list: assignment_expression
  217                         | argument_expression_list COMMA assignment_expression

  218 constant: NUM
  219         | FLOAT_LIT
  220         | CHAR_LIT
  221         | TRUE
  222         | FALSE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO <str> (258) 20
    BREAK <str> (259) 140
    CASE <str> (260) 122
    CHAR <str> (261) 26
    CONST <str> (262)
    CONTINUE <str> (263) 139
    DEFAULT <str> (264) 123
    DO <str> (265) 130
    DOUBLE <str> (266) 31
    ELSE <str> (267) 127
    ENUM <str> (268) 46 47 48
    EXTERN <str> (269) 18
    FLOAT <str> (270) 30
    FOR <str> (271) 131 132 133
    GOTO <str> (272) 138
    IF <str> (273) 126 127
    INT <str> (274) 28
    LONG <str> (275) 29
    REGISTER <str> (276) 19
    RETURN <str> (277) 141 142
    SHORT <str> (278) 27
    SIGNED <str> (279) 32
    SIZEOF <str> (280) 194 195
    STATIC <str> (281) 17
    STRUCT <str> (282) 38
    SWITCH <str> (283) 128
    TYPEDEF <str> (284) 16
    UNION <str> (285) 39
    UNSIGNED <str> (286) 33
    VOID <str> (287) 25
    VOLATILE <str> (288)
    WHILE <str> (289) 129 130
    CLASS <str> (290) 49 50 51
    PRIVATE <str> (291) 57
    PROTECTED <str> (292) 58
    PUBLIC <str> (293) 56
    VIRTUAL <str> (294)
    FRIEND <str> (295)
    INLINE <str> (296)
    OPERATOR <str> (297)
    OVERLOAD <str> (298)
    TEMPLATE <str> (299)
    THIS <str> (300)
    NEW <str> (301)
    DELETE <str> (302)
    NAMESPACE <str> (303)
    USING <str> (304)
    TRY <str> (305)
    CATCH <str> (306)
    THROW <str> (307)
    BOOL <str> (308) 34
    TRUE <str> (309) 221
    FALSE <str> (310) 222
    TYPEDEF_NAME <str> (311)
    ID <str> (312) 35 37 46 48 49 51 68 69 78 121 136 137 138 206 207 210
    NUM <str> (313) 218
    FLOAT_LIT <str> (314) 219
    CHAR_LIT <str> (315) 220
    STRING_LIT <str> (316) 214 215
    PLUS <str> (317) 182 198
    MINUS <str> (318) 183 199
    MUL <str> (319) 76 77 185 197
    DIV <str> (320) 186
    MOD <str> (321) 187
    ASSIGN <str> (322) 65 69 73 147
    PLUS_EQ <str> (323) 148
    MINUS_EQ <str> (324) 149
    MUL_EQ <str> (325) 150
    DIV_EQ <str> (326) 151
    MOD_EQ <str> (327) 152
    INC <str> (328) 191 208
    DEC <str> (329) 192 209
    EQ <str> (330) 171
    NE <str> (331) 172
    LT <str> (332) 174
    GT <str> (333) 175
    LE <str> (334) 176
    GE <str> (335) 177
    AND <str> (336) 163
    OR <str> (337) 161
    NOT <str> (338) 201
    BIT_AND <str> (339) 137 169 196
    BIT_OR <str> (340) 165
    BIT_XOR <str> (341) 167
    BIT_NOT <str> (342) 200
    LSHIFT <str> (343) 179
    RSHIFT <str> (344) 180
    AND_EQ <str> (345) 153
    OR_EQ <str> (346) 154
    XOR_EQ <str> (347) 155
    LSHIFT_EQ <str> (348) 156
    RSHIFT_EQ <str> (349) 157
    ARROW <str> (350) 207
    DOT <str> (351) 206
    SCOPE <str> (352)
    SEMI <str> (353) 10 11 42 59 60 124 125 130 138 139 140 141 142
    COMMA <str> (354) 44 63 67 71 85 86 106 108 144 217
    QUESTION <str> (355) 159
    COLON <str> (356) 54 121 122 123 136 137 159
    LPAREN <str> (357) 79 82 83 93 98 99 100 101 126 127 128 129 130 131 132 133 189 195 204 205 213
    RPAREN <str> (358) 79 82 83 93 98 99 100 101 126 127 128 129 130 131 132 133 189 195 204 205 213
    LBRACE <str> (359) 35 36 46 47 49 50 105 106 109 110
    RBRACE <str> (360) 35 36 46 47 49 50 105 106 109 110
    LBRACKET <str> (361) 80 81 94 95 96 97 203
    RBRACKET <str> (362) 80 81 94 95 96 97 203
    ELLIPSIS <str> (363) 86
    PREP <str> (364) 7
    NEWLINE <str> (365)
    END <str> (366)
    ERROR <str> (367)
    DESTRUCTOR (368)
    UMINUS (369)
    UPLUS (370)
    IF_WITHOUT_ELSE (371)


Nonterminals, with rules where they appear

    $accept (117)
        on left: 0
    program <node> (118)
        on left: 1
        on right: 0
    translation_unit <node> (119)
        on left: 2 3
        on right: 1 3
    external_declaration <node> (120)
        on left: 4 5 6
        on right: 2 3
    preprocessor_directive <node> (121)
        on left: 7
        on right: 6
    function_definition <node> (122)
        on left: 8 9
        on right: 4 61
    declaration <node> (123)
        on left: 10 11
        on right: 5 113 135
    declaration_specifiers <node> (124)
        on left: 12 13 14 15
        on right: 8 10 11 13 15 59 60 87 88 89 136 137
    storage_class_specifier <node> (125)
        on left: 16 17 18 19 20
        on right: 12 13
    type_specifier <node> (126)
        on left: 21 22 23 24
        on right: 14 15 42 102 103
    type_keyword <str> (127)
        on left: 25 26 27 28 29 30 31 32 33 34
        on right: 21
    struct_or_union_specifier <node> (128)
        on left: 35 36 37
        on right: 22
    struct_or_union <str> (129)
        on left: 38 39
        on right: 35 36 37
    struct_declaration_list <node> (130)
        on left: 40 41
        on right: 35 36 41
    struct_declaration <node> (131)
        on left: 42
        on right: 40 41
    struct_declarator_list <node> (132)
        on left: 43 44
        on right: 42 44
    struct_declarator <node> (133)
        on left: 45
        on right: 43 44
    enum_specifier <node> (134)
        on left: 46 47 48
        on right: 23
    class_specifier <node> (135)
        on left: 49 50 51
        on right: 24
    class_declaration_list <node> (136)
        on left: 52 53
        on right: 49 50 53
    class_declaration <node> (137)
        on left: 54 55
        on right: 52 53
    access_specifier <node> (138)
        on left: 56 57 58
        on right: 54
    member_declaration <node> (139)
        on left: 59 60 61
        on right: 55
    member_declarator_list <node> (140)
        on left: 62 63
        on right: 59 63
    member_declarator <node> (141)
        on left: 64 65
        on right: 62 63
    enumerator_list <node> (142)
        on left: 66 67
        on right: 46 47 67
    enumerator <node> (143)
        on left: 68 69
        on right: 66 67
    init_declarator_list <node> (144)
        on left: 70 71
        on right: 10 71
    init_declarator <node> (145)
        on left: 72 73
        on right: 70 71
    declarator <node> (146)
        on left: 74 75
        on right: 8 9 45 64 65 72 73 79 87
    pointer <node> (147)
        on left: 76 77
        on right: 74 77 90 91
    direct_declarator <node> (148)
        on left: 78 79 80 81 82 83
        on right: 74 75 80 81 82 83
    parameter_list <node> (149)
        on left: 84 85 86
        on right: 83 85 86 99 101
    parameter_declaration <node> (150)
        on left: 87 88 89
        on right: 84 85
    abstract_declarator <node> (151)
        on left: 90 91 92
        on right: 88 93 103
    direct_abstract_declarator <node> (152)
        on left: 93 94 95 96 97 98 99 100 101
        on right: 91 92 96 97 100 101
    type_name <node> (153)
        on left: 102 103
        on right: 189 195
    initializer <node> (154)
        on left: 104 105 106
        on right: 73 107 108
    initializer_list <node> (155)
        on left: 107 108
        on right: 105 106 108
    compound_statement <node> (156)
        on left: 109 110
        on right: 8 9 117
    block_item_list <node> (157)
        on left: 111 112
        on right: 110 112
    block_item <node> (158)
        on left: 113 114
        on right: 111 112
    statement <node> (159)
        on left: 115 116 117 118 119 120
        on right: 114 121 122 123 126 127 128 129 130 131 132 133
    labeled_statement <node> (160)
        on left: 121 122 123
        on right: 115
    expression_statement <node> (161)
        on left: 124 125
        on right: 116 131 132 134
    selection_statement <node> (162)
        on left: 126 127 128
        on right: 118
    iteration_statement <node> (163)
        on left: 129 130 131 132 133
        on right: 119
    for_init_statement <node> (164)
        on left: 134 135
        on right: 131 132
    range_based_for <node> (165)
        on left: 136 137
        on right: 133
    jump_statement <node> (166)
        on left: 138 139 140 141 142
        on right: 120
    expression <node> (167)
        on left: 143 144
        on right: 124 126 127 128 129 130 132 136 137 141 144 159 203 213
    assignment_expression <node> (168)
        on left: 145 146
        on right: 65 69 81 95 97 104 122 143 144 146 216 217
    assignment_operator <str> (169)
        on left: 147 148 149 150 151 152 153 154 155 156 157
        on right: 146
    conditional_expression <node> (170)
        on left: 158 159
        on right: 145 159
    logical_or_expression <node> (171)
        on left: 160 161
        on right: 158 159 161
    logical_and_expression <node> (172)
        on left: 162 163
        on right: 160 161 163
    inclusive_or_expression <node> (173)
        on left: 164 165
        on right: 162 163 165
    exclusive_or_expression <node> (174)
        on left: 166 167
        on right: 164 165 167
    and_expression <node> (175)
        on left: 168 169
        on right: 166 167 169
    equality_expression <node> (176)
        on left: 170 171 172
        on right: 168 169 171 172
    relational_expression <node> (177)
        on left: 173 174 175 176 177
        on right: 170 171 172 174 175 176 177
    shift_expression <node> (178)
        on left: 178 179 180
        on right: 173 174 175 176 177 179 180
    additive_expression <node> (179)
        on left: 181 182 183
        on right: 178 179 180 182 183
    multiplicative_expression <node> (180)
        on left: 184 185 186 187
        on right: 181 182 183 185 186 187
    cast_expression <node> (181)
        on left: 188 189
        on right: 184 185 186 187 189 193
    unary_expression <node> (182)
        on left: 190 191 192 193 194 195
        on right: 146 188 191 192 194
    unary_operator <str> (183)
        on left: 196 197 198 199 200 201
        on right: 193
    postfix_expression <node> (184)
        on left: 202 203 204 205 206 207 208 209
        on right: 190 203 204 205 206 207 208 209
    primary_expression <node> (185)
        on left: 210 211 212 213
        on right: 202
    string_literal <node> (186)
        on left: 214 215
        on right: 212 215
    argument_expression_list <node> (187)
        on left: 216 217
        on right: 204 217
    constant <node> (188)
        on left: 218 219 220 221 222
        on right: 211


State 0

    0 $accept: • program $end

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    EXTERN    shift, and go to state 5
    FLOAT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    REGISTER  shift, and go to state 9
    SHORT     shift, and go to state 10
    SIGNED    shift, and go to state 11
    STATIC    shift, and go to state 12
    STRUCT    shift, and go to state 13
    TYPEDEF   shift, and go to state 14
    UNION     shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    CLASS     shift, and go to state 18
    BOOL      shift, and go to state 19
    ID        shift, and go to state 20
    MUL       shift, and go to state 21
    LPAREN    shift, and go to state 22
    PREP      shift, and go to state 23

    program                    go to state 24
    translation_unit           go to state 25
    external_declaration       go to state 26
    preprocessor_directive     go to state 27
    function_definition        go to state 28
    declaration                go to state 29
    declaration_specifiers     go to state 30
    storage_class_specifier    go to state 31
    type_specifier             go to state 32
    type_keyword               go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    enum_specifier             go to state 36
    class_specifier            go to state 37
    declarator                 go to state 38
    pointer                    go to state 39
    direct_declarator          go to state 40


State 1

   20 storage_class_specifier: AUTO •

    $default  reduce using rule 20 (storage_class_specifier)


State 2

   26 type_keyword: CHAR •

    $default  reduce using rule 26 (type_keyword)


State 3

   31 type_keyword: DOUBLE •

    $default  reduce using rule 31 (type_keyword)


State 4

   46 enum_specifier: ENUM • ID LBRACE enumerator_list RBRACE
   47               | ENUM • LBRACE enumerator_list RBRACE
   48               | ENUM • ID

    ID      shift, and go to state 41
    LBRACE  shift, and go to state 42


State 5

   18 storage_class_specifier: EXTERN •

    $default  reduce using rule 18 (storage_class_specifier)


State 6

   30 type_keyword: FLOAT •

    $default  reduce using rule 30 (type_keyword)


State 7

   28 type_keyword: INT •

    $default  reduce using rule 28 (type_keyword)


State 8

   29 type_keyword: LONG •

    $default  reduce using rule 29 (type_keyword)


State 9

   19 storage_class_specifier: REGISTER •

    $default  reduce using rule 19 (storage_class_specifier)


State 10

   27 type_keyword: SHORT •

    $default  reduce using rule 27 (type_keyword)


State 11

   32 type_keyword: SIGNED •

    $default  reduce using rule 32 (type_keyword)


State 12

   17 storage_class_specifier: STATIC •

    $default  reduce using rule 17 (storage_class_specifier)


State 13

   38 struct_or_union: STRUCT •

    $default  reduce using rule 38 (struct_or_union)


State 14

   16 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 16 (storage_class_specifier)


State 15

   39 struct_or_union: UNION •

    $default  reduce using rule 39 (struct_or_union)


State 16

   33 type_keyword: UNSIGNED •

    $default  reduce using rule 33 (type_keyword)


State 17

   25 type_keyword: VOID •

    $default  reduce using rule 25 (type_keyword)


State 18

   49 class_specifier: CLASS • ID LBRACE class_declaration_list RBRACE
   50                | CLASS • LBRACE class_declaration_list RBRACE
   51                | CLASS • ID

    ID      shift, and go to state 43
    LBRACE  shift, and go to state 44


State 19

   34 type_keyword: BOOL •

    $default  reduce using rule 34 (type_keyword)


State 20

   78 direct_declarator: ID •

    $default  reduce using rule 78 (direct_declarator)


State 21

   76 pointer: MUL •
   77        | MUL • pointer

    MUL  shift, and go to state 21

    $default  reduce using rule 76 (pointer)

    pointer  go to state 45


State 22

   79 direct_declarator: LPAREN • declarator RPAREN

    ID      shift, and go to state 20
    MUL     shift, and go to state 21
    LPAREN  shift, and go to state 22

    declarator         go to state 46
    pointer            go to state 39
    direct_declarator  go to state 40


State 23

    7 preprocessor_directive: PREP •

    $default  reduce using rule 7 (preprocessor_directive)


State 24

    0 $accept: program • $end

    $end  shift, and go to state 47


State 25

    1 program: translation_unit •
    3 translation_unit: translation_unit • external_declaration

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    EXTERN    shift, and go to state 5
    FLOAT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    REGISTER  shift, and go to state 9
    SHORT     shift, and go to state 10
    SIGNED    shift, and go to state 11
    STATIC    shift, and go to state 12
    STRUCT    shift, and go to state 13
    TYPEDEF   shift, and go to state 14
    UNION     shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    CLASS     shift, and go to state 18
    BOOL      shift, and go to state 19
    ID        shift, and go to state 20
    MUL       shift, and go to state 21
    LPAREN    shift, and go to state 22
    PREP      shift, and go to state 23

    $default  reduce using rule 1 (program)

    external_declaration       go to state 48
    preprocessor_directive     go to state 27
    function_definition        go to state 28
    declaration                go to state 29
    declaration_specifiers     go to state 30
    storage_class_specifier    go to state 31
    type_specifier             go to state 32
    type_keyword               go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    enum_specifier             go to state 36
    class_specifier            go to state 37
    declarator                 go to state 38
    pointer                    go to state 39
    direct_declarator          go to state 40


State 26

    2 translation_unit: external_declaration •

    $default  reduce using rule 2 (translation_unit)


State 27

    6 external_declaration: preprocessor_directive •

    $default  reduce using rule 6 (external_declaration)


State 28

    4 external_declaration: function_definition •

    $default  reduce using rule 4 (external_declaration)


State 29

    5 external_declaration: declaration •

    $default  reduce using rule 5 (external_declaration)


State 30

    8 function_definition: declaration_specifiers • declarator compound_statement
   10 declaration: declaration_specifiers • init_declarator_list SEMI
   11            | declaration_specifiers • SEMI

    ID      shift, and go to state 20
    MUL     shift, and go to state 21
    SEMI    shift, and go to state 49
    LPAREN  shift, and go to state 22

    init_declarator_list  go to state 50
    init_declarator       go to state 51
    declarator            go to state 52
    pointer               go to state 39
    direct_declarator     go to state 40


State 31

   12 declaration_specifiers: storage_class_specifier •
   13                       | storage_class_specifier • declaration_specifiers

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    EXTERN    shift, and go to state 5
    FLOAT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    REGISTER  shift, and go to state 9
    SHORT     shift, and go to state 10
    SIGNED    shift, and go to state 11
    STATIC    shift, and go to state 12
    STRUCT    shift, and go to state 13
    TYPEDEF   shift, and go to state 14
    UNION     shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    CLASS     shift, and go to state 18
    BOOL      shift, and go to state 19

    $default  reduce using rule 12 (declaration_specifiers)

    declaration_specifiers     go to state 53
    storage_class_specifier    go to state 31
    type_specifier             go to state 32
    type_keyword               go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    enum_specifier             go to state 36
    class_specifier            go to state 37


State 32

   14 declaration_specifiers: type_specifier •
   15                       | type_specifier • declaration_specifiers

    AUTO      shift, and go to state 1
    CHAR      shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    EXTERN    shift, and go to state 5
    FLOAT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    REGISTER  shift, and go to state 9
    SHORT     shift, and go to state 10
    SIGNED    shift, and go to state 11
    STATIC    shift, and go to state 12
    STRUCT    shift, and go to state 13
    TYPEDEF   shift, and go to state 14
    UNION     shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    CLASS     shift, and go to state 18
    BOOL      shift, and go to state 19

    $default  reduce using rule 14 (declaration_specifiers)

    declaration_specifiers     go to state 54
    storage_class_specifier    go to state 31
    type_specifier             go to state 32
    type_keyword               go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    enum_specifier             go to state 36
    class_specifier            go to state 37


State 33

   21 type_specifier: type_keyword •

    $default  reduce using rule 21 (type_specifier)


State 34

   22 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 22 (type_specifier)


State 35

   35 struct_or_union_specifier: struct_or_union • ID LBRACE struct_declaration_list RBRACE
   36                          | struct_or_union • LBRACE struct_declaration_list RBRACE
   37                          | struct_or_union • ID

    ID      shift, and go to state 55
    LBRACE  shift, and go to state 56


State 36

   23 type_specifier: enum_specifier •

    $default  reduce using rule 23 (type_specifier)


State 37

   24 type_specifier: class_specifier •

    $default  reduce using rule 24 (type_specifier)


State 38

    9 function_definition: declarator • compound_statement

    LBRACE  shift, and go to state 57

    compound_statement  go to state 58


State 39

   74 declarator: pointer • direct_declarator

    ID      shift, and go to state 20
    LPAREN  shift, and go to state 22

    direct_declarator  go to state 59


State 40

   75 declarator: direct_declarator •
   80 direct_declarator: direct_declarator • LBRACKET RBRACKET
   81                  | direct_declarator • LBRACKET assignment_expression RBRACKET
   82                  | direct_declarator • LPAREN RPAREN
   83                  | direct_declarator • LPAREN parameter_list RPAREN

    LPAREN    shift, and go to state 60
    LBRACKET  shift, and go to state 61

    $default  reduce using rule 75 (declarator)


State 41

   46 enum_specifier: ENUM ID • LBRACE enumerator_list RBRACE
   48               | ENUM ID •

    LBRACE  shift, and go to state 62

    $default  reduce using rule 48 (enum_specifier)


State 42

   47 enum_specifier: ENUM LBRACE • enumerator_list RBRACE

    ID  shift, and go to state 63

    enumerator_list  go to state 64
    enumerator       go to state 65


State 43

   49 class_specifier: CLASS ID • LBRACE class_declaration_list RBRACE
   51                | CLASS ID •

    LBRACE  shift, and go to state 66

    $default  reduce using rule 51 (class_specifier)


State 44

   50 class_specifier: CLASS LBRACE • class_declaration_list RBRACE

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    DOUBLE     shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    FLOAT      shift, and go to state 6
    INT        shift, and go to state 7
    LONG       shift, and go to state 8
    REGISTER   shift, and go to state 9
    SHORT      shift, and go to state 10
    SIGNED     shift, and go to state 11
    STATIC     shift, and go to state 12
    STRUCT     shift, and go to state 13
    TYPEDEF    shift, and go to state 14
    UNION      shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    CLASS      shift, and go to state 18
    PRIVATE    shift, and go to state 67
    PROTECTED  shift, and go to state 68
    PUBLIC     shift, and go to state 69
    BOOL       shift, and go to state 19
    ID         shift, and go to state 20
    MUL        shift, and go to state 21
    LPAREN     shift, and go to state 22

    function_definition        go to state 70
    declaration_specifiers     go to state 71
    storage_class_specifier    go to state 31
    type_specifier             go to state 32
    type_keyword               go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    enum_specifier             go to state 36
    class_specifier            go to state 37
    class_declaration_list     go to state 72
    class_declaration          go to state 73
    access_specifier           go to state 74
    member_declaration         go to state 75
    declarator                 go to state 38
    pointer                    go to state 39
    direct_declarator          go to state 40


State 45

   77 pointer: MUL pointer •

    $default  reduce using rule 77 (pointer)


State 46

   79 direct_declarator: LPAREN declarator • RPAREN

    RPAREN  shift, and go to state 76


State 47

    0 $accept: program $end •

    $default  accept


State 48

    3 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 3 (translation_unit)


State 49

   11 declaration: declaration_specifiers SEMI •

    $default  reduce using rule 11 (declaration)


State 50

   10 declaration: declaration_specifiers init_declarator_list • SEMI
   71 init_declarator_list: init_declarator_list • COMMA init_declarator

    SEMI   shift, and go to state 77
    COMMA  shift, and go to state 78


State 51

   70 init_declarator_list: init_declarator •

    $default  reduce using rule 70 (init_declarator_list)


State 52

    8 function_definition: declaration_specifiers declarator • compound_statement
   72 init_declarator: declarator •
   73                | declarator • ASSIGN initializer

    ASSIGN  shift, and go to state 79
    LBRACE  shift, and go to state 57

    $default  reduce using rule 72 (init_declarator)

    compound_statement  go to state 80


State 53

   13 declaration_specifiers: storage_class_specifier declaration_specifiers •

    $default  reduce using rule 13 (declaration_specifiers)


State 54

   15 declaration_specifiers: type_specifier declaration_specifiers •

    $default  reduce using rule 15 (declaration_specifiers)


State 55

   35 struct_or_union_specifier: struct_or_union ID • LBRACE struct_declaration_list RBRACE
   37                          | struct_or_union ID •

    LBRACE  shift, and go to state 81

    $default  reduce using rule 37 (struct_or_union_specifier)


State 56

   36 struct_or_union_specifier: struct_or_union LBRACE • struct_declaration_list RBRACE
